# itinera

./: .dockerignore  LICENSE
api/: .env.example  .gitignore  README.md  pyproject.toml
api/app/: __init__.py  config.py  couch.py  deps.py  errors.py  main.py  models.py  scheduler.py  util.py
api/app/importers/: __init__.py  email_importer.py
api/app/routers/: __init__.py  backups.py  exports.py  health.py  imports.py  pdf.py
api/app/services/: __init__.py  backups.py  exports.py  imports.py  pdf.py
api/app/templates/: trip_pdf.html
api/tests/: conftest.py  test_backups.py  test_couch.py  test_exports.py  test_imports.py  test_models.py  test_pdf_context.py  test_routes_exports.py  test_routes_health.py  test_util.py
deploy/: .env.example  .gitignore  Caddyfile  README.md  api.Dockerfile  caddy-entrypoint.sh  docker-compose.yml  web.Dockerfile
deploy/couchdb/: 10-single-node.ini
web/: .gitignore  .npmrc  .prettierignore  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
web/e2e/: offline.spec.ts
web/src/: app.css  app.html  pouchdb.d.ts  service-worker.ts
web/src/lib/: api.ts  destinations.test.ts  destinations.ts  format.test.ts  format.ts  i18n.svelte.ts  live.ts  markdown.ts  overview.test.ts  overview.ts  pwa.ts  trip-context.ts  types.ts  utils.ts
web/src/lib/components/: OfflineBanner.svelte  ReloadPrompt.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/static/: manifest.webmanifest
(+133 files in other folders)
